# sst1mpipe

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  setup.cfg  setup.py
docs/: conf.py  index.rst  introduction.rst  sst1m_analysis_workflow.rst
docs/source/: conf.py  index.rst
notebooks/: mc_dl1_check.ipynb  run_and_visualize_calibration.ipynb  sst1m_high_level_analysis_skymap_theta2.ipynb  sst1m_high_level_analysis_spectrum.ipynb  sst1m_raw_r0_r1.ipynb  sst1mpipe_data_photon_list_analysis.ipynb  sst1mpipe_dl1_data_check.ipynb
sst1mpipe/: constants.py
sst1mpipe/analysis/: __init__.py  analysis.py  data_quality.py  muon_finder.py  visualization.py
sst1mpipe/calib/: __init__.py  calib.py  pulse_shape_maker.py
sst1mpipe/data/: 20220324_0008_0009_Tel2_fitted_parameters.h5  20230228_0112_0115_Tel1_fitted_parameters.h5  20230302_0136_0137_Tel1_fitted_parameters.h5  20230302_0194_0195_Tel2_fitted_parameters.h5  20230322_0248_0249_Tel1_fitted_parameters.h5  20230322_0285_0286_Tel2_fitted_parameters.h5  20230708_0316_0317_Tel1_fitted_parameters.h5  20230917_0528_0529_Tel1_fitted_parameters.h5  20230921_0149_0150_Tel2_fitted_parameters.h5  averaged_calib_param_v2_2023_2024_tel1.h5  averaged_calib_param_v2_2023_2024_tel2.h5  digicam_pixels_mapping_V5T.txt  exemple_daily_ana_config.json  inverted_module_list.json  mc_pde_correction_factors.json  sst1m_array.h5  sst1mpipe_data_config.json  sst1mpipe_mc_config.json
sst1mpipe/instrument/: camera.py  geometry.py
sst1mpipe/io/: __init__.py  containers.py  dl2_to_dl3.py  io.py  sst1m_event_source.py
(+67 files in other folders)
