[metadata]
name = sst1mpipe
description = Analysis chain for the SST-1M prototype
author = SST-1M collaboration
author_email = 
license = BSD 3-Clause
url=https://github.com/SST-1M-collaboration/sst1mpipe
long_description = file: README.md
long_description_content_type = text/markdown
github_project = SST-1M-collaboration/sst1mpipe

[options]
python_requires = >=3.8
